--- a/Traductor/src/app/components/lecciones/lecciones.page.html
+++ b/Traductor/src/app/components/lecciones/lecciones.page.html
@@ -78,10 +78,10 @@
       <ion-col size="12" size-md="6">
         <ion-card class="desafio-card">
           <ion-card-header>
-            <ion-card-title class="ion-text-center text-light">Juegos</ion-card-title>
+            <ion-card-title class="ion-text-center text-light">Juguetes</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            <p class="text-light">Aprende sobre los diferentes tipos de juegos.</p>
+            <p class="text-light">Aprende sobre los diferentes tipos de juguetes.</p>
             <ion-button expand="block" color="tertiary" shape="round" (click)="verDesafio5()">Ver
               Desafío</ion-button>
           </ion-card-content>
