--- a/Traductor/src/app/admin/login/login.page.html
+++ b/Traductor/src/app/admin/login/login.page.html
@@ -13,7 +13,7 @@
       </div>
       <ion-button color="primary" (click)="login()">Iniciar Sesión</ion-button>
       <a routerLink="/admin/recuperar-password" class="text-center">¿Olvidaste tu contraseña?</a>
-      <a routerLink="/home" class="text-decoration-none text-center text-lg text-blue-500 font-bold">&larr; Ir al
+      <a routerLink="/home" class="text-decoration-none text-center text-lg text-blue-500">&larr; Ir al
         inicio</a>
     </div>
   </div>
