--- a/Traductor/src/app/components/login/login.page.html
+++ b/Traductor/src/app/components/login/login.page.html
@@ -12,10 +12,10 @@
         <input type="password" class="form-control" placeholder="************" [(ngModel)]="password">
       </div>
       <ion-button color="primary" (click)="login()">Iniciar Sesión</ion-button>
-      <p class="mt-4">¿No tienes una cuenta? <a routerLink="/signup"
-          class="text-decoration-none text-blue-500 font-bold">Registrate</a></p>
+      <p class="mt-4">¿No tienes una cuenta? <a routerLink="/signup" class="text-blue-500">Registrate</a></p>
       <a routerLink="/recuperar-password" class="text-center">¿Olvidaste tu contraseña?</a>
-      <a routerLink="/home" class="text-decoration-none text-center text-lg text-blue-500 font-bold">&larr; Volver al
+      <a routerLink="/admin/login" class="text-center text-blue-500">Ingresa como administrador</a>
+      <a routerLink="/home" class="text-decoration-none text-center text-lg text-blue-500">&larr; Volver al
         inicio</a>
     </div>
   </div>
