--- a/Traductor/src/app/components/signup/signup.page.html
+++ b/Traductor/src/app/components/signup/signup.page.html
@@ -46,7 +46,7 @@
         }
         <ion-button color="primary" (click)="registrar()">Registrarte</ion-button>
       </form>
-      <a routerLink="/login" class="text-decoration-none text-center text-lg text-blue-500 font-bold">&larr;
+      <a routerLink="/login" class="text-decoration-none text-center text-lg text-blue-500">&larr;
         Volver</a>
     </div>
   </div>
