--- a/Traductor/src/app/admin/recuperar-password/recuperar-password.page.html
+++ b/Traductor/src/app/admin/recuperar-password/recuperar-password.page.html
@@ -33,6 +33,6 @@
     <span class="text-red-500">Las contraseñas no coinciden</span>
   </div>
   }
-  <ion-button expand="block" color="primary" (click)="cambiarPassword()">Cambiar Clave</ion-button>
-  <ion-button expand="block" color="medium" routerLink="/admin/login">Cancelar</ion-button>
+  <ion-button expand="block" color="success" (click)="cambiarPassword()">Cambiar Clave</ion-button>
+  <ion-button expand="block" color="medium" (click)="cancelar()">Cancelar</ion-button>
 </ion-content>
