--- a/Traductor/src/app/components/profile/profile.page.html
+++ b/Traductor/src/app/components/profile/profile.page.html
@@ -3,8 +3,7 @@
     <ion-title>Perfil</ion-title>
     <ion-buttons slot="start">
       <ion-button (click)="goBack()">
-        <ion-icon name="arrow-back-outline"></ion-icon>
-        Regresar
+        <i class='bx bx-log-out-circle icon'></i>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
