--- a/Traductor/src/app/home/home.page.html
+++ b/Traductor/src/app/home/home.page.html
@@ -43,8 +43,7 @@
         <div class="mt-20">
             <div class="ion-text-center">
                 <div>
-                    <h2 class="text-3xl font-bold pb-2">Aprende Español con Shuar</h2>
-                    <ion-label class="text-xl font-semibold">Traducción Bidireccional</ion-label>
+                    <h2 class="text-xl font-bold pb-2">Aprende Shuar - Español</h2>
                 </div>
                 <p class="text-lg">
                     Bienvenido a nuestra aplicación diseñada para ayudar a los hablantes de Shuar a aprender español.
@@ -65,36 +64,15 @@
                 <ion-col size="12" size-md="6">
                     <ion-title class="text-lg font-bold mb-2">Aprenderás</ion-title>
                     <p class="text-gray-700">
-                        Nuestra aplicación está especialmente diseñada para hablantes de Shuar que desean aprender
-                        español.
+                        Nuestra aplicación está diseñada para los hablantes de ambos idiomas que desean aprender.
                         A través de traducciones precisas y ejercicios prácticos, te ayudaremos a mejorar tu habilidad
-                        en el
-                        español.
+                        en ambos idiomas.
                     </p>
                 </ion-col>
                 <ion-col size="12" size-md="6">
                     <ion-title class="text-lg font-bold mb-2">Te Ayudamos</ion-title>
                     <p class="text-gray-700">
-                        Ofrecemos una interfaz amigable y recursos educativos para facilitar tu aprendizaje del español.
-                        Además, tendrás acceso a soporte y consejos personalizados para resolver cualquier dificultad
-                        que
-                        encuentres en el proceso.
-                    </p>
-                </ion-col>
-            </ion-row>
-        </div>
-    </section>
-
-    <section>
-        <div class="mt-20 ion-text-center">
-            <ion-row class="ion-justify-content-center">
-                <ion-col size="12" size-md="8">
-                    <ion-title class="text-xl font-bold mb-2">Shuar / Español</ion-title>
-                    <p class="text-gray-700">
-                        La aplicación ofrece una traducción bidireccional que permite a los hablantes de Shuar aprender
-                        y
-                        practicar español de manera efectiva. Simplificamos el proceso de aprendizaje con herramientas
-                        diseñadas para mejorar tu fluidez y comprensión del idioma.
+                        Ofrecemos una interfaz amigable y recursos educativos para facilitar tu aprendizaje.
                     </p>
                 </ion-col>
                 <ion-col size="12" size-md="4">
