--- a/Traductor/src/app/admin/navbar/navbar.page.html
+++ b/Traductor/src/app/admin/navbar/navbar.page.html
@@ -1,38 +1,38 @@
 <ion-menu side="end" contentId="main-content">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu</ion-title>
+      <ion-title>Menú</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
     <ion-list>
-      <ion-item routerLink="/dashboard" routerDirection="root">
-        <ion-icon name="home-outline" slot="start"></ion-icon>
+      <!-- Dashboard -->
+      <ion-item (click)="dashboard()" routerDirection="root" lines="none" class="menu-item">
+        <i class='bx bxs-dashboard icon'></i>
         <ion-label>Dashboard</ion-label>
       </ion-item>
-      <ion-item routerLink="/admin/user/lista" routerDirection="root">
-        <ion-icon name="person-add-outline" slot="start"></ion-icon>
+
+      <!-- Gestión de Usuarios -->
+      <ion-item (click)="usuarios()" routerDirection="root" lines="none" class="menu-item">
+        <i class='bx bxs-user icon'></i>
         <ion-label>Gestión de Usuarios</ion-label>
       </ion-item>
-      <ion-item routerLink="/admins" routerDirection="root">
-        <ion-icon name="people-outline" slot="start"></ion-icon>
+
+      <!-- Gestión de Administradores -->
+      <ion-item (click)="admins()" routerDirection="root" lines="none" class="menu-item">
+        <i class='bx bxs-user-detail icon'></i>
         <ion-label>Gestión de Administradores</ion-label>
       </ion-item>
+
       <!-- Perfil -->
-      <ion-item routerLink="/admin/user/profile" routerDirection="root">
-        <ion-icon name="person-outline" slot="start"></ion-icon>
+      <ion-item (click)="perfil()" routerDirection="root" lines="none" class="menu-item">
+        <i class='bx bxs-user-circle icon'></i>
         <ion-label>Perfil</ion-label>
       </ion-item>
-      <ion-item routerLink="/configuraciones" routerDirection="root">
-        <ion-icon name="settings-outline" slot="start"></ion-icon>
-        <ion-label>Configuraciones</ion-label>
-      </ion-item>
-      <ion-item routerLink="/acerca" routerDirection="root">
-        <ion-icon name="information-circle-outline" slot="start"></ion-icon>
-        <ion-label>Acerca de</ion-label>
-      </ion-item>
-      <ion-item routerLink="/home" routerDirection="root">
-        <ion-icon name="information-circle-outline" slot="start"></ion-icon>
+
+      <!-- Salir -->
+      <ion-item (click)="salir()" routerDirection="root" lines="none" class="menu-item">
+        <i class='bx bx-log-out icon'></i>
         <ion-label>Salir</ion-label>
       </ion-item>
     </ion-list>
