--- a/Traductor/src/app/components/traductor/traductor.page.html
+++ b/Traductor/src/app/components/traductor/traductor.page.html
@@ -2,8 +2,8 @@
   <ion-toolbar>
     <ion-buttons slot="end" (click)="perfil()">
       <!-- Botón con icono de perfil -->
-      <ion-button>Perfil
-        <ion-icon slot="icon-only" name="person-circle-outline"></ion-icon>
+      <ion-button>
+        <i class='bx bxs-user-circle bx-md'></i>
       </ion-button>
     </ion-buttons>
     <ion-title>Menú Principal</ion-title>
@@ -26,14 +26,13 @@
           </ion-col>
         </ion-row>
 
-        <ion-row>
-          <!-- Botón Sonidos -->
+        <!-- <ion-row>
           <ion-col size="12">
             <ion-button expand="block" color="success" shape="round" size="large" (click)="sonidos()">
               Sonidos
             </ion-button>
           </ion-col>
-        </ion-row>
+        </ion-row> -->
 
         <ion-row>
           <!-- Botón Desafíos -->
@@ -53,7 +52,6 @@
           </ion-col>
         </ion-row>
       </ion-grid>
-
     </div>
   </section>
 </ion-content>
