Mejora del diseño

--- a/Traductor/src/app/components/desafios/desafio-one/desafio-one.page.html
+++ b/Traductor/src/app/components/desafios/desafio-one/desafio-one.page.html
@@ -2,8 +2,7 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button (click)="goBack()">
-        <ion-icon name="arrow-back-outline"></ion-icon>
-        Regresar
+        <i class='bx bx-log-out-circle icon'></i>
       </ion-button>
     </ion-buttons>
     <ion-title>Desafío 1: Saludos en Español</ion-title>
