--- a/Traductor/src/app/components/lecciones/lecciones.page.html
+++ b/Traductor/src/app/components/lecciones/lecciones.page.html
@@ -2,11 +2,10 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button (click)="goBack()">
-        <ion-icon name="arrow-back-outline"></ion-icon>
-        Regresar
+        <i class='bx bx-log-out-circle icon'></i>
       </ion-button>
     </ion-buttons>
-    <ion-title>Desafíos y Ejercicios</ion-title>
+    <ion-title>Desafíos</ion-title>
   </ion-toolbar>
 </ion-header>
 
