--- a/Traductor/src/app/components/aprender/aprender.page.scss
+++ b/Traductor/src/app/components/aprender/aprender.page.scss
@@ -4,3 +4,24 @@
     object-fit: contain; /* Esto mantiene la proporción de la imagen */
     margin: auto;
   }
+
+  /* Estilos generales para el menú */
+ion-menu {
+  --background: #f9f9f9;
+  --ion-background-color: #ffffff;
+}
+
+ion-toolbar {
+  --background: #4c5baf;
+  --color: #ffffff;
+}
+
+ion-title {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.icon {
+  color: #ffffff;
+  font-size: 22px;
+}
