--- a/Traductor/src/app/components/desafios/desafio-three/desafio-three.page.scss
+++ b/Traductor/src/app/components/desafios/desafio-three/desafio-three.page.scss
@@ -31,3 +31,22 @@
     margin-bottom: 20px;
   }
   
+    /* Estilos generales para el menú */
+ion-menu {
+  --background: #f9f9f9;
+  --ion-background-color: #ffffff;
+}
+
+ion-toolbar {
+  --background: #4c5baf;
+  --color: #ffffff;
+}
+
+ion-title {
+  font-weight: bold;
+}
+
+.icon {
+  color: #ffffff;
+  font-size: 22px;
+}
