--- a/Traductor/src/app/home/home.page.html
+++ b/Traductor/src/app/home/home.page.html
@@ -2,7 +2,7 @@
     <ion-toolbar>
         <ion-title>Traductor</ion-title>
         <ion-buttons slot="end">
-            <ion-button color="primary" routerLink="/login">Iniciar Sesión</ion-button>
+            <ion-button routerLink="/login">Iniciar Sesión</ion-button>
         </ion-buttons>
     </ion-toolbar>
 </ion-header>
