--- a/Traductor/src/app/components/aprender/aprender.page.html
+++ b/Traductor/src/app/components/aprender/aprender.page.html
@@ -23,50 +23,50 @@
       <ion-grid>
         <ion-row>
           <ion-col size="6" size-md="2">
-            <ion-card (click)="traducirSaludos('traducir')">
+            <ion-card (click)="traducirSaludos('amíkmajme')">
               <!-- <img src="../../../assets/img/saludos/hola.png" alt="Hola" /> -->
               <ion-card-header>
-                <ion-card-title>Hola</ion-card-title>
+                <ion-card-title>Amíkmajme</ion-card-title>
               </ion-card-header>
             </ion-card>
           </ion-col>
           <ion-col size="6" size-md="2">
-            <ion-card (click)="traducirSaludos('traducir')">
+            <ion-card (click)="traducirSaludos('weakur amikmatal')">
               <!-- <img src="../../../assets/img/saludos/adios.png" alt="Adiós" /> -->
               <ion-card-header>
-                <ion-card-title>Adiós</ion-card-title>
+                <ion-card-title>Weakur amikmatal</ion-card-title>
               </ion-card-header>
             </ion-card>
           </ion-col>
           <ion-col size="6" size-md="2">
-            <ion-card (click)="traducirSaludos('traducir')">
+            <ion-card (click)="traducirSaludos('pénker tsawaa')">
               <!-- <img src="../../../assets/img/saludos/buenos dias.png" alt="Buenos días" /> -->
               <ion-card-header>
-                <ion-card-title>Buenos días</ion-card-title>
+                <ion-card-title>Pénker tsawaa</ion-card-title>
               </ion-card-header>
             </ion-card>
           </ion-col>
           <ion-col size="6" size-md="2">
-            <ion-card (click)="traducirSaludos('traducir')">
+            <ion-card (click)="traducirSaludos('pénker kía')">
               <!-- <img src="../../../assets/img/saludos/buenastardes.png" alt="Buenas tardes" /> -->
               <ion-card-header>
-                <ion-card-title>Buenas tardes</ion-card-title>
+                <ion-card-title>Pénker kía</ion-card-title>
               </ion-card-header>
             </ion-card>
           </ion-col>
           <ion-col size="6" size-md="2">
-            <ion-card (click)="traducirSaludos('traducir')">
+            <ion-card (click)="traducirSaludos('pénker kashi')">
               <!-- <img src="../../../assets/img/saludos/buenasnoches.png" alt="Buenas noches" /> -->
               <ion-card-header>
-                <ion-card-title>Buenas noches</ion-card-title>
+                <ion-card-title>Pénker kashi</ion-card-title>
               </ion-card-header>
             </ion-card>
           </ion-col>
           <ion-col size="6" size-md="2">
-            <ion-card (click)="traducirSaludos('traducir')">
+            <ion-card (click)="traducirSaludos('ame naaram yait')">
               <!-- <img src="../../../assets/img/saludos/comoestas.png" alt="¿Cómo estás?" /> -->
               <ion-card-header>
-                <ion-card-title>¿Cómo estás?</ion-card-title>
+                <ion-card-title>Ame naaram yait</ion-card-title>
               </ion-card-header>
             </ion-card>
           </ion-col>
@@ -78,8 +78,8 @@
   <!-- Sección de Colores y Números -->
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Ukújtiúrmar y Nekápmatal</ion-card-title>
-      <ion-card-subtitle>Colores y Números</ion-card-subtitle>
+      <ion-card-title>Ukújtiúrmar y Nekápmatal - Colores y Números</ion-card-title>
+      <!-- <ion-card-subtitle>Colores y Números</ion-card-subtitle> -->
     </ion-card-header>
 
     <ion-card-content>
@@ -121,7 +121,7 @@
             </ion-card>
           </ion-col>
           <ion-col size="6" size-md="2">
-            <ion-card (click)="traducir('chikichik')">
+            <ion-card (click)="traducir('chikíchik')">
               <ion-img src="../../../assets/img/colores-nums/uno.jpg" class="toy-image"></ion-img>
               <ion-card-header>
                 <ion-card-title>Chikichik</ion-card-title>
@@ -137,7 +137,7 @@
             </ion-card>
           </ion-col>
           <ion-col size="6" size-md="2">
-            <ion-card (click)="traducir('mehaínt')">
+            <ion-card (click)="traducir('menaínt')">
               <ion-img src="../../../assets/img/colores-nums/tres.jpg" class="toy-image"></ion-img>
               <ion-card-header>
                 <ion-card-title>Mehaínt</ion-card-title>
@@ -145,8 +145,56 @@
             </ion-card>
           </ion-col>
           <ion-col size="6" size-md="2">
-            <ion-card (click)="traducir('aintiuk')">
+            <ion-card (click)="traducir('aíntiuk')">
               <ion-img src="../../../assets/img/colores-nums/cuatro.jpg" class="toy-image"></ion-img>
+              <ion-card-header>
+                <ion-card-title>Aíntiuk</ion-card-title>
+              </ion-card-header>
+            </ion-card>
+          </ion-col>
+          <ion-col size="6" size-md="2">
+            <ion-card (click)="traducir('ewéj')">
+              <ion-img src="../../../assets/img/colores-nums/5.jpg" class="toy-image"></ion-img>
+              <ion-card-header>
+                <ion-card-title>Ewéj</ion-card-title>
+              </ion-card-header>
+            </ion-card>
+          </ion-col>
+          <ion-col size="6" size-md="2">
+            <ion-card (click)="traducir('ujúk')">
+              <ion-img src="../../../assets/img/colores-nums/6.jpg" class="toy-image"></ion-img>
+              <ion-card-header>
+                <ion-card-title>Ujúk</ion-card-title>
+              </ion-card-header>
+            </ion-card>
+          </ion-col>
+          <ion-col size="6" size-md="2">
+            <ion-card (click)="traducir('tsénkent')">
+              <ion-img src="../../../assets/img/colores-nums/7.jpg" class="toy-image"></ion-img>
+              <ion-card-header>
+                <ion-card-title>Tsénkent</ion-card-title>
+              </ion-card-header>
+            </ion-card>
+          </ion-col>
+          <ion-col size="6" size-md="2">
+            <ion-card (click)="traducir('yarúsh')">
+              <ion-img src="../../../assets/img/colores-nums/8.png" class="toy-image"></ion-img>
+              <ion-card-header>
+                <ion-card-title>Yarúsh</ion-card-title>
+              </ion-card-header>
+            </ion-card>
+          </ion-col>
+          <ion-col size="6" size-md="2">
+            <ion-card (click)="traducir('usumtai')">
+              <ion-img src="../../../assets/img/colores-nums/9.jpg" class="toy-image"></ion-img>
+              <ion-card-header>
+                <ion-card-title>Usúmtai</ion-card-title>
+              </ion-card-header>
+            </ion-card>
+          </ion-col>
+          <ion-col size="6" size-md="2">
+            <ion-card (click)="traducir('náwe')">
+              <ion-img src="../../../assets/img/colores-nums/10.jpg" class="toy-image"></ion-img>
               <ion-card-header>
                 <ion-card-title>Aíntiuk</ion-card-title>
               </ion-card-header>
@@ -160,8 +208,8 @@
   <!-- Sección de Familia -->
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Wí shuar</ion-card-title>
-      <ion-card-subtitle>Mi familia</ion-card-subtitle>
+      <ion-card-title>Wí shuar - Mi familia</ion-card-title>
+      <!-- <ion-card-subtitle>Mi familia</ion-card-subtitle> -->
     </ion-card-header>
 
     <ion-card-content>
@@ -226,8 +274,8 @@
   <!-- Sección de Juguetes -->
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Winia nakúrutair</ion-card-title>
-      <ion-card-subtitle>Mis juguetes</ion-card-subtitle>
+      <ion-card-title>Winia nakúrutair - Mis juguetes</ion-card-title>
+      <!-- <ion-card-subtitle>Mis juguetes</ion-card-subtitle> -->
     </ion-card-header>
 
     <ion-card-content>
@@ -284,8 +332,8 @@
   <!-- Sección de Animales -->
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Aíniawai</ion-card-title>
-      <ion-card-subtitle>Animales</ion-card-subtitle>
+      <ion-card-title>Aíniawai - Animales</ion-card-title>
+      <!-- <ion-card-subtitle>Animales</ion-card-subtitle> -->
     </ion-card-header>
 
     <ion-card-content>
@@ -311,7 +359,7 @@
             </ion-card>
           </ion-col>
           <ion-col size="6" size-md="2">
-            <ion-card (click)="traducirAnimales('chai')">
+            <ion-card (click)="traducirAnimales('chaí')">
               <img src="../../../assets/img/animales/oso.jpg" alt="Oso" />
               <ion-card-header>
                 <ion-card-title>Chaí</ion-card-title>
