--- a/Traductor/src/app/components/traductor/traductor.page.html
+++ b/Traductor/src/app/components/traductor/traductor.page.html
@@ -26,14 +26,6 @@
           </ion-col>
         </ion-row>
 
-        <!-- <ion-row>
-          <ion-col size="12">
-            <ion-button expand="block" color="success" shape="round" size="large" (click)="sonidos()">
-              Sonidos
-            </ion-button>
-          </ion-col>
-        </ion-row> -->
-
         <ion-row>
           <!-- Botón Desafíos -->
           <ion-col size="12">
@@ -48,6 +40,14 @@
           <ion-col size="12">
             <ion-button expand="block" color="danger" shape="round" size="large" (click)="regresar()">
               Regresar
+            </ion-button>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col size="12">
+            <ion-button expand="block" color="success" shape="round" size="large" (click)="puntaje()">
+              Mi Puntaje
             </ion-button>
           </ion-col>
         </ion-row>
