--- a/Traductor/src/app/home/home.page.html
+++ b/Traductor/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header class="fixed z-50">
     <ion-toolbar>
-        <ion-title>Traductor</ion-title>
+        <ion-title>Chichaman yapajín</ion-title>
         <ion-buttons slot="end">
             <ion-button routerLink="/login">Iniciar Sesión</ion-button>
         </ion-buttons>
