--- a/Traductor/src/app/components/aprender/aprender.page.html
+++ b/Traductor/src/app/components/aprender/aprender.page.html
@@ -13,7 +13,7 @@
   <!-- Sección de Saludos -->
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Saludos</ion-card-title>
+      <ion-card-title>Amikmartin - Saludos</ion-card-title>
     </ion-card-header>
 
     <ion-card-content>
